--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,5 +3,8 @@
     "stylelint-config-standard-scss",
     "stylelint-config-prettier-scss",
     "stylelint-config-recess-order"
-  ]
+  ],
+  "rules": {
+    "selector-class-pattern": null
+  }
 }
