--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "react-uuid": "^1.0.2",
     "sass": "^1.49.9",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
