Created Modal, Other In Description
Upgraded to React 18, Changed states naming, aside toggle button at header, button component, naming of classes of add task tag items; Sorted Todo component

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,10 @@
     "import/extensions": "off",
     "import/prefer-default-export": "off",
     "react/jsx-props-no-spreading": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-static-element-interactions": "off",
     "no-param-reassign": 0,
+    "no-self-import": 0,
     "react/function-component-definition": [
       2,
       {
